--- a/html_description.html
+++ b/html_description.html
@@ -213,14 +213,14 @@ print(modFit)</code></pre>
 ##                      Number of trees: 500
 ## No. of variables tried at each split: 7
 ## 
-##         OOB estimate of  error rate: 0.72%
+##         OOB estimate of  error rate: 0.67%
 ## Confusion matrix:
 ##      A    B    C    D    E class.error
-## A 3342    4    0    1    1 0.001792115
-## B   12 2258    9    0    0 0.009214568
-## C    0   16 2033    5    0 0.010223953
-## D    0    0   25 1903    2 0.013989637
-## E    0    0    3    7 2155 0.004618938</code></pre>
+## A 3344    3    1    0    0 0.001194743
+## B   14 2259    6    0    0 0.008775779
+## C    0   14 2035    5    0 0.009250243
+## D    0    0   24 1903    3 0.013989637
+## E    0    1    2    6 2156 0.004157044</code></pre>
 <pre class="r"><code>#cross validation on my testing data
 #out of sample error
 predict1 &lt;- predict(modFit, myTest, type = &quot;class&quot;)
@@ -229,33 +229,33 @@ confusionMatrix(myTest$classe, predict1)</code></pre>
 ## 
 ##           Reference
 ## Prediction    A    B    C    D    E
-##          A 2231    1    0    0    0
-##          B    6 1507    5    0    0
-##          C    0   16 1350    2    0
-##          D    0    0   21 1265    0
-##          E    0    0    0    8 1434
+##          A 2230    1    0    0    1
+##          B    2 1511    5    0    0
+##          C    0   10 1357    1    0
+##          D    0    0   14 1271    1
+##          E    0    0    0    3 1439
 ## 
 ## Overall Statistics
 ##                                           
-##                Accuracy : 0.9925          
-##                  95% CI : (0.9903, 0.9943)
-##     No Information Rate : 0.2851          
+##                Accuracy : 0.9952          
+##                  95% CI : (0.9934, 0.9966)
+##     No Information Rate : 0.2845          
 ##     P-Value [Acc &gt; NIR] : &lt; 2.2e-16       
 ##                                           
-##                   Kappa : 0.9905          
+##                   Kappa : 0.9939          
 ##  Mcnemar's Test P-Value : NA              
 ## 
 ## Statistics by Class:
 ## 
 ##                      Class: A Class: B Class: C Class: D Class: E
-## Sensitivity            0.9973   0.9888   0.9811   0.9922   1.0000
-## Specificity            0.9998   0.9983   0.9972   0.9968   0.9988
-## Pos Pred Value         0.9996   0.9928   0.9868   0.9837   0.9945
-## Neg Pred Value         0.9989   0.9973   0.9960   0.9985   1.0000
-## Prevalence             0.2851   0.1942   0.1754   0.1625   0.1828
-## Detection Rate         0.2843   0.1921   0.1721   0.1612   0.1828
+## Sensitivity            0.9991   0.9928   0.9862   0.9969   0.9986
+## Specificity            0.9996   0.9989   0.9983   0.9977   0.9995
+## Pos Pred Value         0.9991   0.9954   0.9920   0.9883   0.9979
+## Neg Pred Value         0.9996   0.9983   0.9971   0.9994   0.9997
+## Prevalence             0.2845   0.1940   0.1754   0.1625   0.1837
+## Detection Rate         0.2842   0.1926   0.1730   0.1620   0.1834
 ## Detection Prevalence   0.2845   0.1935   0.1744   0.1639   0.1838
-## Balanced Accuracy      0.9986   0.9936   0.9892   0.9945   0.9994</code></pre>
+## Balanced Accuracy      0.9994   0.9958   0.9922   0.9973   0.9991</code></pre>
 <pre class="r"><code>#in sample error
 predict_train &lt;- predict(modFit, myTrain, type = &quot;class&quot;)
 confusionMatrix(myTrain$classe, predict_train)</code></pre>
@@ -290,6 +290,10 @@ confusionMatrix(myTrain$classe, predict_train)</code></pre>
 ## Detection Rate         0.2843   0.1935   0.1744   0.1639   0.1838
 ## Detection Prevalence   0.2843   0.1935   0.1744   0.1639   0.1838
 ## Balanced Accuracy      1.0000   1.0000   1.0000   1.0000   1.0000</code></pre>
+</div>
+<div id="summary-of-accuracy-and-error" class="section level2">
+<h2>Summary of Accuracy and Error</h2>
+<p>As shown in the accuracy result above, when tested on the subset data used for cross validation we get an accuracy of 99%. This can be used to estimate our out of sample error. On the other hand the fabricated model is fitted to the training portion of the data, we get an accuracy of 100%. This can be used to estimate the in sample error.</p>
 </div>
 <div id="prediction-verification" class="section level2">
 <h2>Prediction Verification</h2>
